--- a/src/css/home.css
+++ b/src/css/home.css
@@ -87,16 +87,16 @@ button {
     min-width: 7rem;
     padding: .3rem;
     margin: auto;
-    background: gray;
+    background: rgb(30, 190, 65);
     border: none;
     border-radius: .5rem;
 }
 
 [class*="player"] input {
     border: none;
-    background-color: gray;
-    width: 100%;
-    padding: .2rem;
-    padding-inline: .5rem;
+    border-radius: .5rem;
+    background-color: rgb(218, 218, 218);
+    width: auto;
+    padding: .5rem;
     cursor: auto;
 }
